RESOLVED FIXED122224
get_callee and to_this aren't properly cleared during finalizeUnconditionally
https://bugs.webkit.org/show_bug.cgi?id=122224
Summary get_callee and to_this aren't properly cleared during finalizeUnconditionally
Mark Hahnenberg
Reported 2013-10-02 11:11:51 PDT
Patch coming.
Attachments
Patch (1.96 KB, patch)
2013-10-02 11:52 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2013-10-02 11:52:34 PDT
Mark Hahnenberg
Comment 2 2013-10-02 11:52:54 PDT
Geoffrey Garen
Comment 3 2013-10-02 12:07:53 PDT
Comment on attachment 213182 [details] Patch r=me
WebKit Commit Bot
Comment 4 2013-10-02 12:37:32 PDT
Comment on attachment 213182 [details] Patch Clearing flags on attachment: 213182 Committed r156787: <http://trac.webkit.org/changeset/156787>
WebKit Commit Bot
Comment 5 2013-10-02 12:37:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.