get_callee and to_this aren't properly cleared during finalizeUnconditionally https://bugs.webkit.org/show_bug.cgi?id=122224

Reviewed by Geoffrey Garen.

Even though there is code to clear unmarked inline cache objects in finalizeUnconditionally,
it will never run because get_callee and to_this weren't added to the proper Vector in the
UnlinkedCodeBlock that is iterated during finalizeUnconditionally.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::BytecodeGenerator):
(JSC::BytecodeGenerator::emitCreateThis):


Canonical link: https://commits.webkit.org/140272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156787 268f45cc-cd09-0410-ab3c-d52691b4dbfc